--- a/style/style.css
+++ b/style/style.css
@@ -112,17 +112,16 @@ li {
     position: absolute;
     height: 300px;
     width: 100%;
-    transition: 0.2s linear;
+    transition: 0.3s ease;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     opacity: 0;
-    background-color: rgba(255, 255, 255, 0);
     font-weight: 700;
 }
 
 .overlay:hover {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.9);
     opacity: 1;
 }
 
