updated active house photo

--- a/style/style.css
+++ b/style/style.css
@@ -145,7 +145,7 @@ li {
 }
 
 #banner {
-    background-image: url("../resources/alumni.jpeg");
+    background-image: url("../resources/actives.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
